Correct button-menu collapse

--- a/src/components/button-menu/button-menu.scss
+++ b/src/components/button-menu/button-menu.scss
@@ -12,6 +12,7 @@
   padding: var(--zn-spacing-small) 0;
   margin: 0;
 
+  min-width: 35px;
   max-width: var(--zn-max-width);
 
   &__container {
